// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test backup 1`] = `"If you lose access to file then you will not be able to restore access to the wallet. File \\"0xff00ff00.json\\" saved in \\"Downloads\\" directory"`;

exports[`Test backup 2`] = `"Success save wallet"`;

exports[`Test backup 3`] = `
Object {
  "type": 1,
}
`;

exports[`Test backup 4`] = `
Object {
  "type": 2,
}
`;

exports[`Test empty password 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 25,
        "marginTop": 80,
      }
    }
  >
    [missing "en.wallet_file_backup.title" translation]
  </Text>
  <Text
    style={
      Object {
        "color": "#888888",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 40,
        "width": "90%",
      }
    }
  >
    [missing "en.wallet_file_backup.description" translation]
  </Text>
  <View
    style={
      Object {
        "marginTop": 30,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="name"
      defaultValue="0xff00ff00"
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.filename_placeholder\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 20,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="password"
      defaultValue=""
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.password_placeholder\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      textContentType="newPassword"
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 20,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="password"
      defaultValue=""
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.confirm_password\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      textContentType="newPassword"
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "bottom": 40,
        "position": "absolute",
        "width": "80%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        [missing "en.confirm_btn_title" translation]
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test loading 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#2AB2E2"
    hidesWhenStopped={true}
    size={80}
    testID="loader"
  />
</View>
`;

exports[`Test minimum password length 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 25,
        "marginTop": 80,
      }
    }
  >
    [missing "en.wallet_file_backup.title" translation]
  </Text>
  <Text
    style={
      Object {
        "color": "#888888",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 40,
        "width": "90%",
      }
    }
  >
    [missing "en.wallet_file_backup.description" translation]
  </Text>
  <View
    style={
      Object {
        "marginTop": 30,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="name"
      defaultValue="0xff00ff00"
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.filename_placeholder\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 20,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="password"
      defaultValue="123"
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.password_placeholder\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      textContentType="newPassword"
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 20,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="password"
      defaultValue="123"
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.confirm_password\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      textContentType="newPassword"
      underlineColorAndroid="transparent"
    />
  </View>
  <Text
    style={
      Object {
        "color": "red",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 20,
      }
    }
  >
    [missing "en.wallet_file_backup.pass_len_err" translation]
  </Text>
</View>
`;

exports[`Test password do not match 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 25,
        "marginTop": 80,
      }
    }
  >
    [missing "en.wallet_file_backup.title" translation]
  </Text>
  <Text
    style={
      Object {
        "color": "#888888",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 40,
        "width": "90%",
      }
    }
  >
    [missing "en.wallet_file_backup.description" translation]
  </Text>
  <View
    style={
      Object {
        "marginTop": 30,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="name"
      defaultValue="0xff00ff00"
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.filename_placeholder\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 20,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="password"
      defaultValue="123123"
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.password_placeholder\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      textContentType="newPassword"
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 20,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="password"
      defaultValue="123111"
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.confirm_password\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      textContentType="newPassword"
      underlineColorAndroid="transparent"
    />
  </View>
  <Text
    style={
      Object {
        "color": "red",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 20,
      }
    }
  >
    [missing "en.wallet_file_backup.pass_len_err" translation]
  </Text>
</View>
`;

exports[`Test success password 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 25,
        "marginTop": 80,
      }
    }
  >
    [missing "en.wallet_file_backup.title" translation]
  </Text>
  <Text
    style={
      Object {
        "color": "#888888",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 40,
        "width": "90%",
      }
    }
  >
    [missing "en.wallet_file_backup.description" translation]
  </Text>
  <View
    style={
      Object {
        "marginTop": 30,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="name"
      defaultValue="0xff00ff00"
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.filename_placeholder\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 20,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="password"
      defaultValue="123123"
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.password_placeholder\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      textContentType="newPassword"
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 20,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCompleteType="password"
      defaultValue="123123"
      onChangeText={[Function]}
      placeholder="[missing \\"en.wallet_file_backup.confirm_password\\" translation]"
      placeholderTextColor="#BFBDBD"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#CCCCCC",
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "height": 40,
          },
          Object {
            "width": "100%",
          },
        ]
      }
      textContentType="newPassword"
      underlineColorAndroid="transparent"
    />
  </View>
  <Text
    style={
      Object {
        "color": "red",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 20,
      }
    }
  >
    [missing "en.wallet_file_backup.pass_len_err" translation]
  </Text>
</View>
`;
